slice/src/components/bTb/bTb.scss
.bTb {
  display: table;
  width: 100%;
  max-width: 636px;
  margin: 0 auto;
  $this: &;

  &__tHead {
    display: table-header-group;
  }

  &__tBody, &__tTrGroup {
    display: table-row-group;
  }

  &__tr {
    display: table-row;
    border: 1px solid #cbcbcb;

    &:first-child, &_first {

      #{$this}__td {
        border-top: 1px solid #cbcbcb;

        &:first-child {
          border-top-left-radius: 5px;
        }

        &:last-child {
          border-top-right-radius: 5px;
        }
      }
    }

    &:last-child, &_last  {

      #{$this}__td {

        &:first-child {
          border-bottom-left-radius: 5px;
        }

        &:last-child {
          border-bottom-right-radius: 5px;
        }
      }
    }
  }

  &__th {
    font-family: $RobotoCondensed-Regular;
    color: $color-gray-4;
    font-size: 14px;
    text-transform: uppercase;
    display: table-cell;
    padding: 2px;

    @include sm {
      padding: 10px 10px;
      font-size: 14px;
    }
  }

  &__td {
    display: table-cell;
    padding: 10px 5px;
    background: $color-white;
    border-bottom: 1px solid #cbcbcb;
    font-family: $Roboto-Regular;
    color: $color-blue;
    font-size: 14px;
    line-height: 1.27;

    @include sm {
      padding: 22px 10px 18px;
      font-size: 14px;
    }

    &:first-child {
      border-left: 1px solid #cbcbcb;
    }

    &:last-child {
      border-right: 1px solid #cbcbcb;
    }

    strong {
      font-family: $Roboto-Bold;

      @include xs-only {
        //text-transform: lowercase;

        //a {
        //  text-transform: capitalize;
        //}
      }
    }

    .btn_s_a {
      min-width: 35px;
      padding: 5px 7px;
    }
  }

  &_a {

    #{$this}__td, #{$this}__th {
      color: $color-gray-3;

      &:first-child {
        padding-left: 5px;
        text-align: center;
        white-space: nowrap;

        @include sm {
          padding-left: 16px;
        }

        @include sm {
          width: 90px;
          text-align: left;
        }
      }
      /*
      &:last-child {
        vertical-align: middle;
      } */

      a {
        padding: 9px 8px;
      }
    }

    &_v1 {

      #{$this}__th {
        vertical-align: bottom;

        &:last-child {
          text-align: center;
        }
      }


      #{$this}__td {

        &:last-child {
          vertical-align: top;
        }

        &:nth-child(3) {
          width: 93px;
        }
      }
    }

    &_vo {
      border-spacing: 0 3px;

      @include sm {
        border-spacing: 0 12px;
      }

      #{$this}__th {
        padding: 0 10px;
      }

      #{$this}__tr {
        position: relative;

        &:first-child {

          #{$this}__td {

            @include sm {
              padding: 24px 0px 31px;
            }

            &:first-child {
              padding-left: 5px;

              @include sm {
                padding-left: 16px;
              }
            }

            &:before {
              display: none;
            }
          }
        }
      }

      #{$this}__td {
        position: relative;
        vertical-align: middle;
        //text-align: center;
        padding: 5px 3px;
        font-size: 14px;
        line-height: 1.27;

        @include sm {
          font-size: 14px;
          padding: 12px 0px 31px;
        }

        &:before {
          @include pseudo-block($top: -3px, $left: -1px, $right: 0);
          background: #fff;
          height: 3px;

          @include sm {
            top: -12px;
            height: 12px;
          }
        }

        &:first-child {

          &:before {
            border-left: 1px solid #cbcbcb;
          }
        }

        &:last-child {

          &:before {
            left: 0;
            right: -1px;
            border-right: 1px solid #cbcbcb;
          }
        }

      }

      #{$this}__text {

        &_a {
          text-transform: lowercase;

          @include sm {
            text-transform: uppercase;
          }
        }
      }
    }

    &_staff {

      #{$this}__td {
        vertical-align: middle;

        &:first-child {
          white-space: normal;
          text-align: left;

          @include sm {
            width: 180px;
          }
        }

        &:nth-child(2) {

          span {
            color: #8f8f8f;
            font-family: $Roboto-Regular;
            font-size: 14px;
          }
        }

        &:last-child {
          padding-right: 16px;
        }
      }
    }
  }

  .tablesort {
    position: relative;
    top: 4px;
    left: 2px;
  }

  &._mw {

    &_auto {
      max-width: 100%;
      overflow-x: auto;

      @include xs-only {
        display: block;
      }
    }
  }

  &_gap {

    &_a {
      margin-bottom: 57px;
    }
  }
}

